--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,14 @@ Package: michaelmallari.r
 Title: Michael Mallari
 Version: 0.0.0.9000
 Authors@R: 
-    person("Michael", "Mallari", , "hello@michaelmallari.com", role = c("aut", "cre"))
+    person(
+      given="Michael",
+      family="Mallari",
+      email="hello@michaelmallari.com",
+      role=c("aut", "cre")
+    )
 Description: A small package of custom utility functions and ggplot2 theme.
 License: MIT + file LICENSE
 Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
+Roxygen: list(markdown=TRUE)
 RoxygenNote: 7.3.2
